Agregar invitaciones privadas para traslado de mecanicos
